# editor

./: .gitignore  .travis.yml  CMakeLists.txt  Document.cpp  Document.h  Editor.cpp  Editor.h  README.md  doxyfile.in  main.cpp
Shape/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
